<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestZone</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_qrscanner_activitiy">QRScannerActivitiy</string>
    <string name="title_activity_jsengine">JSEngineActivity</string>
    <string name="jshint">Enter javascript code to be executed</string>
    <string name="eval">Evaluate Code</string>
    <string name="evalfunc">Evaluate Function</string>
    <string name="genfunc">Generate Function</string>
    <string name="hintfuncname">Enter your function name. e.g myFunction</string>
    <string name="hintscript">Enter the body of your script. e.g return pasrseInt(a)+parseInt(b)+parseInt(d);</string>
    <string name="hintargString">Enter the string rep of ypur arg. e.g a, b, c</string>
    <string name="hintactualArguments">Enter the actual values of your arguments for the function. e.g 4, 6, 8</string>
    <string name="confirm">Confirm generated method below fits your requirement.</string>
    <string name="title_activity_encrypt">EncryptActivity</string>
    <string name="title_activity_flow">FLow Engine Activity</string>

</resources>
