<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.testzone.JSEngineActivity" >
    
    <EditText 
        android:id="@+id/script"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:minHeight="80dp"
        android:inputType="text"
        android:hint="@string/jshint"
        />
    
    <requestFocus />
    
    <Button 
        android:id="@+id/eval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eval"
        />
    
    <Button 
        android:id="@+id/evalfunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evalfunc"
        />

</LinearLayout>
