<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
     >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="5dp"
        />
    
    <TextView 
        android:id="@+id/generatedFunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/funcRealArgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintactualArguments"
        android:inputType="textMultiLine" />
    
    <Button 
        android:id="@+id/evalFunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/evalfunc"
        />

</LinearLayout>
</ScrollView>